Se cre nuevo proyecto

--- a/code/cmi-ejb/nbproject/project.properties
+++ b/code/cmi-ejb/nbproject/project.properties
@@ -22,6 +22,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.openjpa-all-2.3.0.jar=../../../librerias/apache-openjpa-2.3.0-binary/apache-openjpa-2.3.0/openjpa-all-2.3.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -35,7 +36,10 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=cmi-ejb.jar
-javac.classpath=
+jars.in.ejbjar=false
+javac.classpath=\
+    ${libs.junit_4.classpath}:\
+    ${file.reference.openjpa-all-2.3.0.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
