Se logra colocar pruebas

--- a/code/cmi-ejb/nbproject/project.properties
+++ b/code/cmi-ejb/nbproject/project.properties
@@ -22,7 +22,6 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.openjpa-all-2.3.0.jar=../../../librerias/apache-openjpa-2.3.0-binary/apache-openjpa-2.3.0/openjpa-all-2.3.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -39,13 +38,13 @@ jar.name=cmi-ejb.jar
 jars.in.ejbjar=false
 javac.classpath=\
     ${libs.junit_4.classpath}:\
-    ${file.reference.openjpa-all-2.3.0.jar}
+    ${libs.OPENJPA.classpath}:\
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${libs.LOG4J.classpath}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}:\
-    ${libs.eclipselink.classpath}:\
-    ${libs.eclipselinkmodelgen.classpath}
+    ${javac.classpath}
 javac.source=1.6
 javac.target=1.6
 javac.test.classpath=\
@@ -73,7 +72,7 @@ run.test.classpath=\
     ${build.test.classes.dir}
 # Space-separated list of JVM arguments used when running a class with a main method or a unit test
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
-runmain.jvmargs=
+runmain.jvmargs=-javaagent:lib/openjpa-all-2.3.0.jar
 source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
