--- a/code/cmi-ejb/nbproject/project.properties
+++ b/code/cmi-ejb/nbproject/project.properties
@@ -38,9 +38,9 @@ jar.name=cmi-ejb.jar
 jars.in.ejbjar=false
 javac.classpath=\
     ${libs.junit_4.classpath}:\
-    ${libs.OPENJPA.classpath}:\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${libs.LOG4J.classpath}
+    ${libs.LOG4J.classpath}:\
+    ${libs.eclipselink.classpath}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
@@ -72,7 +72,7 @@ run.test.classpath=\
     ${build.test.classes.dir}
 # Space-separated list of JVM arguments used when running a class with a main method or a unit test
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
-runmain.jvmargs=-javaagent:lib/openjpa-all-2.3.0.jar
+runmain.jvmargs=
 source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
