--- a/code/cmi-web/nbproject/project.properties
+++ b/code/cmi-web/nbproject/project.properties
@@ -54,7 +54,9 @@ jar.compress=false
 javac.classpath=\
     ${libs.jsf20.classpath}:\
     ${file.reference.primefaces-5.1.jar}:\
-    ${reference.cmi-ejb.dist}
+    ${reference.cmi-ejb.dist}:\
+    ${libs.LOG4J.classpath}:\
+    ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
