--- a/code/cmi-web/nbproject/private/private.properties
+++ b/code/cmi-web/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\wwlopez\\AppData\\Roaming\\NetBeans\\8.0.1\\config\\GlassFishEE6\\Properties\\gfv3113973065.properties
+deploy.ant.properties.file=C:\\Users\\chamoW\\AppData\\Roaming\\NetBeans\\8.0.1\\config\\GlassFishEE6\\Properties\\gfv3-838507764.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/wwlopez/AppData/Roaming/NetBeans/8.0.1/config/GF_4.1/domain1
-j2ee.server.home=C:/Program Files (x86)/glassfish-4.1/glassfish
-j2ee.server.instance=[C:\\Program Files (x86)\\glassfish-4.1\\glassfish;C:\\Program Files (x86)\\glassfish-4.1\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
-j2ee.server.middleware=C:/Program Files (x86)/glassfish-4.1
+j2ee.server.domain=F:/Programas/glassfish-4.0/glassfish/domains/domain1
+j2ee.server.home=F:/Programas/glassfish-4.0/glassfish
+j2ee.server.instance=[F:\\Programas\\glassfish-4.0\\glassfish;F:\\Programas\\glassfish-4.0\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=F:/Programas/glassfish-4.0
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\wwlopez\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+user.properties.file=C:\\Users\\chamoW\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
