--- a/code/cmi-web/nbproject/private/private.properties
+++ b/code/cmi-web/nbproject/private/private.properties
@@ -1,9 +1,9 @@
-deploy.ant.properties.file=C:\\Users\\chamoW\\AppData\\Roaming\\NetBeans\\8.0.1\\config\\GlassFishEE6\\Properties\\gfv3-838507764.properties
+deploy.ant.properties.file=C:\\Users\\chamoW\\AppData\\Roaming\\NetBeans\\8.0.1\\config\\GlassFishEE6\\Properties\\gfv31006286630.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=F:/Programas/glassfish-4.0/glassfish/domains/domain1
-j2ee.server.home=F:/Programas/glassfish-4.0/glassfish
-j2ee.server.instance=[F:\\Programas\\glassfish-4.0\\glassfish;F:\\Programas\\glassfish-4.0\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=F:/Programas/glassfish-4.0
+j2ee.server.domain=F:/Programas/servidores/glassfish4/glassfish/domains/domain1
+j2ee.server.home=F:/Programas/servidores/glassfish4/glassfish
+j2ee.server.instance=[F:\\Programas\\servidores\\glassfish4\\glassfish;F:\\Programas\\servidores\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=F:/Programas/servidores/glassfish4
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
